<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~     Copyright (c) 2025 Okocraft
  ~
  ~     This file is part of DiscordChatBridge.
  ~
  ~     DiscordChatBridge is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     DiscordChatBridge is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with DiscordChatBridge. If not, see <https://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.okocraft.discordchatbridge</groupId>
    <artifactId>discordchatbridge</artifactId>
    <version>3.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>DiscordChatBridge</name>
    <url>https://github.com/okocraft/DiscordChatBridge</url>
    <description>A Paper/Velocity plugin that connects Vanilla chat or LunaChat and Discord</description>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/okocraft/DiscordChatBridge.git</connection>
        <developerConnection>scm:git:git@github.com:okocraft/DiscordChatBridge.git</developerConnection>
        <url>https://github.com/okocraft/DiscordChatBridge</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/okocraft/DiscordChatBridge/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/okocraft/DiscordChatBridge/runs</url>
    </ciManagement>

    <properties>
        <java.version>21</java.version>
        <project.charset>UTF-8</project.charset>
        <project.build.sourceEncoding>${project.charset}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.charset}</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>ucchy-github</id>
            <url>https://raw.github.com/ucchyocean/mvn-repo/master</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper https://github.com/PaperMC/Paper -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Velocity -->
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-api</artifactId>
            <version>3.4.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- LuckPerms -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.5</version>
            <scope>provided</scope>
        </dependency>
        <!-- LunaChat https://github.com/ucchyocean/LunaChat -->
        <dependency>
            <groupId>com.github.ucchyocean</groupId>
            <artifactId>LunaChat</artifactId>
            <version>3.0.16</version>
            <scope>provided</scope>
        </dependency>
        <!-- JDA https://github.com/DV8FromTheWorld/JDA -->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>5.6.1</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>club.minnced</groupId>
                    <artifactId>opus-java</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.code.gson</groupId>
                    <artifactId>gson</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- ConfigAPI https://github.com/Siroshun09/ConfigAPI -->
        <dependency>
            <groupId>com.github.siroshun09.configapi</groupId>
            <artifactId>configapi-yaml</artifactId>
            <version>4.6.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <encoding>${project.charset}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <finalName>${project.name}-${project.version}-original</finalName>
                    <archive combine.children="append">
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <Automatic-Module-Name>${project.groupId}</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <finalName>${project.name}-${project.version}</finalName>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*</exclude>
                                <exclude>module-info.class</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <relocations>
                        <relocation>
                            <pattern>com.github.siroshun09.configapi</pattern>
                            <shadedPattern>${project.groupId}.lib.configapi</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.crypto</pattern>
                            <shadedPattern>${project.groupId}.lib.crypto</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.errorprone</pattern>
                            <shadedPattern>${project.groupId}.lib.errorprone</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>google.protobuf</pattern>
                            <shadedPattern>${project.groupId}.lib.protobuf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.dv8tion.jda</pattern>
                            <shadedPattern>${project.groupId}.lib.jda</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.fasterxml</pattern>
                            <shadedPattern>${project.groupId}.lib.fasterxml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.iwebpp.crypto</pattern>
                            <shadedPattern>${project.groupId}.lib.crypto</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.neovisionaries.ws</pattern>
                            <shadedPattern>${project.groupId}.lib.ws</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>gnu.trove</pattern>
                            <shadedPattern>${project.groupId}.lib.trove</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>javax.annotation</pattern>
                            <shadedPattern>${project.groupId}.lib.javax.annotation</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okhttp3</pattern>
                            <shadedPattern>${project.groupId}.lib.okhttp3</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okio</pattern>
                            <shadedPattern>${project.groupId}.lib.okio</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons</pattern>
                            <shadedPattern>${project.groupId}.lib.commons</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.jetbrains</pattern>
                            <shadedPattern>${project.groupId}.lib.jetbrains</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.intellij</pattern>
                            <shadedPattern>${project.groupId}.lib.intellij</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>kotlin</pattern>
                            <shadedPattern>${project.groupId}.lib.kotlin</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
